<resources>
    <string name="app_name">Inter IIT Sports Meet 2019</string>
    <string name="title_sports">Sports</string>
    <string name="title_newsletter">Newsletter</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="inter_iit_sports_meet_n2019">Inter IIT Sports Meet 2019</string>
    <string name="title_activity_specific_sports">SpecificSportsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="live">Live</string>
    <string name="schedule">Schedule</string>
    <string name="points">Points Table</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="team1_logo">Team1_Logo</string>
    <string name="team2_logo">Team2_logo</string>
    <string name="vs">VS</string>
    <string name="moments">Moments</string>
    <string name="enquiry">Enquiry</string>
    <string name="sponsors">Sponsors</string>
    <string name="team">Team</string>
    <string name="email_id">Email id</string>
    <string name="name">Moment Name</string>
    <string name="moment_name">Moment Description</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="scan_qr_and_submit">Scan QR to submit</string>
    <string name="splash">Splash</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scan_qr_for_mess">Scan QR for Mess</string>
    <string name="please_wait">Please Wait ..</string>
</resources>
