<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_live">

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.iitkharagpur.interiitsports2.sports_page_ui.LiveFragment"
        android:label="@string/live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.iitkharagpur.interiitsports2.sports_page_ui.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_points"
        android:name="com.iitkharagpur.interiitsports2.sports_page_ui.PointsFragment"
        android:label="@string/points"
        tools:layout="@layout/fragment_points" />


</navigation>