<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="1dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:background="@drawable/team_match_card_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/match_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/points" />

    <ImageView
        android:id="@+id/team1_logo"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/match_type"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/team1_logo" />

    <ImageView
        android:id="@+id/team2_logo"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/match_type"
        android:layout_alignParentEnd="true"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/team2_logo" />

    <TextView
        android:id="@+id/team1_score"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/team1_logo"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/match_type"
        android:fontFamily="@font/montserratsemibold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:text="@string/points"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/team2_score"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toStartOf="@+id/team2_logo"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_below="@id/match_type"
        android:text="@string/points"
        android:fontFamily="@font/montserratsemibold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/team1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/team1_logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserratsemibold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/points"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/team2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/team2_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserratsemibold"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="@string/points"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/match_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:text="@string/points"
        android:layout_below="@id/team1_name"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/vs_img"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/match_type"
        android:layout_toEndOf="@id/team1_score"
        android:layout_toStartOf="@id/team2_score"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/vs"
        android:contentDescription="@string/vs" />


</RelativeLayout>

